@@ -5,7 +5,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: kahua-install.in,v 1.1 2003/12/11 05:39:11 nobsun Exp $
+;; $Id: kahua-install.in,v 1.2 2004/01/13 08:55:56 shiro Exp $
 
 ;; Installs Kahua's application server materials according to
 ;; the kahua.conf configuration settings.
@@ -15,12 +15,17 @@
 (use file.util)
 
 (define (usage)
-  (print "kahua-install [-c conf-file][-t type][-r name][--no-overwrite] file ...")
+  (print "kahua-install [-c conf-file][-U][-t type][-r name][--no-overwrite] file ...")
+  (print "  Install files under kahua-managed directories.")
+  (print "   -U : uninstall files instead of installing.")
   (print "   -t type: script | static | base.  static by default.")
   (print "   -r (rename): rename file to name.  When this option is given,")
   (print "      only one file can be specified.")
   (print "   --no-overwrite : if the target file exists, the file won't be")
   (print "         installed.")
+  (print)
+  (print "kahua-install [-c conf-file][-U] --dirs")
+  (print "  Creates (or removes) kahua-managed directories.")
   (exit 0))
 
 (define (main args)
@@ -28,12 +33,18 @@
       ((conf-file "c=s")
        (material-type "t=s" "static")
        (rename    "r=s")
+       (uninstall? "U")
+       (dirs?     "dirs")
        (no-over   "no-overwrite")
        . files)
     (unless (member material-type '("script" "static" "base")) (usage))
     (when (and rename (not (= (length files) 1))) (usage))
     (kahua-init conf-file)
-    (for-each (cut install-file <> material-type rename no-over) files))
+    (if dirs?
+      (install-dirs uninstall?)
+      (if uninstall?
+        (for-each (cut uninstall-file <> material-type rename) files)
+        (for-each (cut install-file <> material-type rename no-over) files))))
   0)
 
 (define (install-file file material-type rename no-over)
@@ -50,6 +61,36 @@
       (make-directory* target-dir #o755)
       (copy-file file target :if-exists :supersede :safe #t)
       (sys-chmod target #o444)))))
+
+(define (uninstall-file file material-type rename)
+  (let* ((target     (target-path material-type (or rename file)))
+         (target-dir (sys-dirname target)))
+    (when (file-exists? target)
+      (with-error-handler
+          (lambda (e)
+            (warn "couldn't uninstall ~a: ~a" target (ref e 'message)))
+        (lambda ()
+          (sys-unlink target))))
+    (when (and (file-is-directory? target-dir)
+               (equal? (sys-readdir target-dir) '("." "..")))
+      (with-error-handler
+          (lambda (e)
+            (warn "couldn't remove the directory ~a: ~a"
+                  target-dir (ref e 'message)))
+        (lambda ()
+          (sys-rmdir target-dir))))))
+
+;; NB: uninstalling dirs isn't implemented yet, since it can be
+;; pretty dangerous operation.
+(define (install-dirs uninstall?)
+  (let* ((sockaddr (supervisor-sockaddr (kahua-sockbase)))
+         (dirs (list* (ref (kahua-config) 'working-directory)
+                      (kahua-static-document-path "")
+                      (if (is-a? sockaddr <sockaddr-un>)
+                        (list (sys-dirname (sockaddr-name sockaddr)))
+                        '()))))
+    (dolist (dir dirs)
+      (make-directory* dir))))
 
 (define (target-path material-type file)
   (cond ((equal? material-type "script")
